# pagefind

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  SECURITY.md  justfile  rustfmt.toml
.backstage/: create_package.cjs
.cloudcannon/: routing.json
.github/workflows/: dependabot.yml  release.yml  test.yml
docs/: go.mod  go.sum  hugo.toml
docs/content/: _index.md
docs/content/docs/: api-reference.md  filtering.md  hosting.md  installation.md  multilingual.md  search-config.md  ui.md  v1-migration.md
docs/data/: banner.yml  footer.yml  nav.yml
pagefind/: Cargo.toml
pagefind/integration_tests/anchors_example/: background.toolproof.yml
pagefind/integration_tests/base/: pagefind-main-thread-fallback.toolproof.yml  pagefind-web-worker-verification.toolproof.yml
pagefind/integration_tests/characters/: fallback-pagefind-matches-special-characters.toolproof.yml
pagefind/integration_tests/compound_filtering/: background.toolproof.yml  fallback-filtering-to-a-complex-nested-filter.toolproof.yml
pagefind/integration_tests/debounce/: fallback-debounce-with-options.toolproof.yml
pagefind_playground/: package-lock.json  package.json
pagefind_ui/default/: package-lock.json  package.json
pagefind_ui/modular/: README.md  package-lock.json  package.json
pagefind_ui/translations/: de.json  nb.json  nn.json
pagefind_web/: Cargo.toml  local_build.sh
pagefind_web/src/: search.rs
pagefind_web_js/: build.js  package-lock.json  package.json  tsconfig.json
pagefind_web_js/lib/: coupled_search.ts  pagefind_worker.ts  public_search_api.ts  search_wrapper.ts
pagefind_web_js/types/: index.d.ts  internal.d.ts
wrappers/node/: package.json
wrappers/python/: pyproject.toml
wrappers/python/scripts/: activate_venv.sh
wrappers/python/scripts/ci/: format.sh
wrappers/python/scripts/ci/cog/: update.sh
wrappers/python/scripts/ci/github/: activate_venv.sh  debug_python_paths.sh  install_dev_dependencies.sh  setup_uv.sh
wrappers/python/src/pagefind/: __init__.py
wrappers/python/src/pagefind/service/: __init__.py
wrappers/python/src/tests/: README.md
(+14 files in other folders)
